<resources>
    <string name="app_name">UniverRebornLite</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_button">Login</string>
    <string name="login_form_hint">Student ID</string>
    <string name="pass_hint">Password</string>
    <string name="user_profile">UserProfile</string>
    <string name="error_auth_message">Invalid username or password</string>
    <string name="demo_card_text">TEST</string>

    <string name="profile_sex">Пол</string>
    <string name="profile_student_id">ID студента</string>
    <string name="profile_grade_id">Зачетка</string>
    <string name="profile_patronymic">Отчество</string>
    <string name="profile_edu_form">Форма обучения</string>
    <string name="profile_edu_level">Уровень обучнения</string>
    <string name="profile_lang_div">Отделение</string>
    <string name="profile_stage">Ступень обучения</string>
    <string name="profile_for_lang">Иностранный язык</string>
    <string name="profile_course_num">Номер курса</string>
    <string name="profile_grant_date">Дата выдачи гранта</string>
    <string name="profile_grant_num">Номер гранта</string>
    <string name="profile_status">Статус</string>
    <string name="profile_surname">Фамилия</string>
    <string name="profile_name">Имя</string>
    <string name="profile_university">Универ</string>
    <string name="university_kstu_code">KSTU</string>
    <string name="expand_subject_card">Expand subject card</string>
    <string name="title_attendance">Журнал</string>
    <string name="title_examSchedule">Экзамены</string>
    <string name="title_news">Новости</string>
    <string name="title_profile">Профиль</string>
    <string name="logo">LOGO</string>
    <string name="detail_btn">Подробнее</string>

    <string name="toolbar_session_indicator">%d Семестр</string>
    <string name="ukmd_title">UMKD</string>
</resources>
