<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/appbar_simple" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresher"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

            <LinearLayout
            android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/materialCardView"
                style="@style/Widget.MaterialComponents.CardView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="4dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/appCompatImageView"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="28dp"
                        android:layout_marginEnd="8dp"
                        android:src="@drawable/ic_person_black_24dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.498"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/mainName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.496"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/appCompatImageView" />

                    <TextView
                        android:id="@+id/faculty"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="8dp"
                        android:textAlignment="center"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.495"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/mainName" />

                    <TextView
                        android:id="@+id/speciality"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:singleLine="false"
                        android:textAlignment="center"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.496"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/faculty" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/materialCardView2"
                style="@style/Widget.MaterialComponents.CardView"
        android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:minHeight="200dp">

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:columnCount="2">

                    <TextView
                        android:layout_columnSpan="1"
                        android:layout_columnWeight="2"
                        android:text="@string/profile_university"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_columnSpan="1"
                        android:layout_columnWeight="2"
                        android:text="@string/university_kstu_code" />

                    <TextView
                        android:layout_columnSpan="1"
                        android:layout_columnWeight="2"
                        android:text="@string/profile_edu_form"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/edu_form"
                        android:layout_columnSpan="1"
                        android:layout_columnWeight="2" />

                    <TextView
                        android:layout_columnSpan="1"
                        android:layout_columnWeight="1"
                        android:text="@string/profile_edu_level"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/edu_level"
                        android:layout_columnSpan="1"
                        android:layout_columnWeight="2" />

                    <TextView
                        android:layout_columnSpan="1"
                        android:layout_columnWeight="1"
                        android:text="@string/profile_lang_div"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/lang_div"
                        android:layout_columnSpan="1"
                        android:layout_columnWeight="2" />

                    <TextView
                        android:layout_columnSpan="1"
                        android:layout_columnWeight="1"
                        android:text="@string/profile_stage"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/stage"
                        android:layout_columnSpan="1"
                        android:layout_columnWeight="2" />


                    <TextView
                        android:layout_columnSpan="1"
                        android:layout_columnWeight="1"
                        android:text="@string/profile_for_lang"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/for_lang"
                        android:layout_columnSpan="1"
                        android:layout_columnWeight="2" />


                    <TextView
                        android:layout_columnSpan="1"
                        android:layout_columnWeight="1"
                        android:text="@string/profile_course_num"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/course_num"
                        android:layout_columnSpan="1"
                        android:layout_columnWeight="2" />

                    <TextView
                        android:layout_columnSpan="1"
                        android:layout_columnWeight="1"
                        android:text="@string/profile_grant_date"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/grant_date"
                        android:layout_columnSpan="1"
                        android:layout_columnWeight="2" />

                    <TextView
                        android:layout_columnSpan="1"
                        android:layout_columnWeight="1"
                        android:text="@string/profile_grant_num"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/grant_num"
                        android:layout_columnSpan="1"
                        android:layout_columnWeight="2" />

                    <TextView
                        android:layout_width="54dp"
                        android:layout_columnSpan="1"
                        android:layout_columnWeight="1"
                        android:text="@string/profile_status"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/status"
                        android:layout_columnWeight="2" />

                </GridLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                style="@style/Widget.MaterialComponents.CardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp">


                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:columnCount="2">

                    <TextView
                        android:layout_columnSpan="1"
                        android:layout_columnWeight="1"
                        android:text="@string/profile_surname"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/surname"
                        android:layout_columnWeight="2" />

                    <TextView
                        android:layout_columnSpan="1"
                        android:layout_columnWeight="1"
                        android:text="@string/profile_name"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/name"
                        android:layout_columnWeight="2" />

                    <TextView
                        android:layout_columnWeight="1"
                        android:text="@string/profile_patronymic"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/patronymic"
                        android:layout_columnWeight="2" />

                    <TextView
                        android:layout_columnSpan="1"
                        android:layout_columnWeight="1"
                        android:text="@string/profile_grade_id"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/gradeId"
                        android:layout_columnWeight="2" />

                    <TextView
                        android:layout_columnSpan="1"
                        android:layout_columnWeight="1"
                        android:text="@string/profile_sex"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/sex"
                        android:layout_columnWeight="2" />

                    <TextView
                        android:layout_columnWeight="1"
                        android:text="@string/profile_student_id"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/studentId"
                        android:layout_columnWeight="2" />

                </GridLayout>
            </com.google.android.material.card.MaterialCardView>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
