<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingTop="56dp"
            android:paddingRight="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:fontFamily="@font/work_sans_bold"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="32dp"
                android:contentDescription="@string/logo"
                android:elevation="4dp"
                android:src="@mipmap/ic_launcher_round" />

            <!-- Student ID Label -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_normal"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="@dimen/margin_normal"
                android:layout_marginBottom="8dp"
                android:animateLayoutChanges="true"
                app:boxBackgroundMode="filled"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <EditText
                    android:id="@+id/input_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:hint="@string/login_form_hint"
                    android:inputType="textEmailAddress"
                    android:autofillHints="@string/login_form_hint"
                    tools:ignore="UnusedAttribute" />
            </com.google.android.material.textfield.TextInputLayout><!-- Password Label -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginStart="@dimen/margin_normal"
                android:layout_marginEnd="@dimen/margin_normal"
                android:layout_marginBottom="8dp"
                android:animateLayoutChanges="true"
                app:boxBackgroundMode="filled"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/pass_hint"
                    android:fontFamily="sans-serif"
                    android:hint="@string/pass_hint"
                    android:inputType="textPassword"
                    tools:ignore="UnusedAttribute" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/login_btn"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_normal"
                android:padding="8dp"
                android:text="@string/login_button"
                android:textSize="20sp" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:visibility="gone"
                android:layout_width="match_parent"
                style="?android:attr/progressBarStyle"
                android:layout_height="wrap_content"
                tools:visibility="visible" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
